--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+  [Claudia Mascandola]
+  * Added class "LanzanoEtAl2019_RJB_OMO_NESS2" to lanzano_2019 gsim
+
   [Michele Simionato]
   * Improved the parallelization of disagg_source in AELO calculations
   * Fixed the OverflowError: Python integer out of bounds for uint32
