--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+  [Michele Simionato]
+  * Optimized the management of cluster of sources (the array loop)
+  * Changed the ps_grid_spacing approximation to use average occurrence rates
+
   [Claudia Mascandola]
   * Added class "LanzanoEtAl2019_RJB_OMO_NESS2" to lanzano_2019 gsim
 
