Fixed misprint [ci skip]

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-  [Lana Todorovich]
+  [Lana Todorovic]
   * Fixed the Macedo2019 GMPE with underlying GMPEs requiring extra parameters
     (like the KuehnEtAl2020SInter requiring ztor)
 
