--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
   [Michele Simionato]
-  * Removed the obsolete ebrisk calculator, since it can be replaced
-    with ground_motion_fields = false
+  * Removed the ebrisk calculation mode, since it can be replaced
+    with event_based_risk with ground_motion_fields = false
   * Turned LSD into a primary IMT, so that the Youd and ZhangZhao GMPE
     can be used
 
