--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Optimized the rupture prefiltering when starting from a SES
   * Raised an early error if the vulnerability functions are not
     strictly increasing
   * Fixed a bug in classical_risk with nontrivial weights in the
