Fixed typo [ci skip]

--- a/debian/changelog
+++ b/debian/changelog
@@ -116,7 +116,7 @@
   * Extended the aggregation by `site_id` to multiple tags
   * Fixed an extract bug in disagg-traditional with realizations
   * Fixed a bug with the quantiles in event_based_damage
-  * Improved loggin the progress in event based risk
+  * Improved logging the progress in event based risk
   * Reduced slow tasks in the USA model
   * Added output `mce_default` in AELO calculations
   * Extended `oq export_mean_disagg_by_src` to multiple sites
