--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Implemented rupture prefiltering for scenario and event based calculators
+
   [Paolo Tormene]
   * Added the possibility to assign tags to jobs and to set a job as the
     "preferred" one for a tag
@@ -5,7 +8,6 @@
   [Michele Simionato]
   * Internal: extended reduce_sm to reduce the source models to a single source
   * Implemented event_based_risk from ses.hdf5
-  * Optimized the rupture prefiltering when starting from a SES
   * Raised an early error if the vulnerability functions are not
     strictly increasing
   * Fixed a bug in classical_risk with nontrivial weights in the
