--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+  [Anirudh Rao]
+  * Add missing axis argument in recent bugfix in classical_risk 
+    with nontrivial weights in the taxonomy mapping
+
   [Michele Simionato]
   * Extended the global_ses script to accepts job.ini files
   * Implemented `oq engine --run job1.ini .. jobN.ini --hc parent.hdf5`
