Updated changelog [ci skip]

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added command `oq ses` to generate a merged stochastic event set
   * Extended the global_ses script to accepts job.ini files
   * Implemented `oq engine --run job1.ini .. jobN.ini --hc parent.hdf5`
   * Extended `--hc` to accept paths to datastore files
