Update changelog [ci skip]

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+  [Paul Henshaw, Paolo Tormene]
+  * Force use of utf8 encoding when writing non-binary files.
+  * Update AreaSource demo to use UTF8 chars that are obviously not ASCII.
+  * Use utf-8-sig when reading so as to handle BOM
+
   [Michele Simionato]
   * Backported the fix for small negative damages (https://github.com/gem/oq-engine/pull/10772)
   * Fixed the documentation about the installation directories
