--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,10 @@
 python3-oq-engine (3.24.0-1~xenial01) xenial; urgency=low
 
+  [Paul Henshaw, Paolo Tormene]
+  * Force use of utf8 encoding when writing non-binary files.
+  * Update AreaSource demo to use UTF8 chars that are obviously not ASCII.
+  * Use utf-8-sig when reading so as to handle BOM
+
   [Michele Simionato]
   * Removed the BASE33489 hack and made the first branch of the source
     model logic tree regular, with a single letter abbreviation
