--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Supported site-specific gsim logic trees via `site_labels`
   * Added `source_info` to the global SES file
   * Optimized `_save_events` for large calculations over 100,000 events
   * Parallelized the rupture prefiltering
