--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+  [Paolo Tormene]
+  * Fixed the management and layout/styling of navigation buttons in the
+    WebUI, with and without authentication
+  * Improved the default configuration of the TOOLS_ONLY WebUI application mode
+
   [Michele Simionato]
   * Supported site-specific gsim logic trees via `site_labels`
   * Added `source_info` to the global SES file
