--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
   [Paolo Tormene]
   * Fixed the management and layout/styling of navigation buttons in the
     WebUI, with and without authentication
-  * Improved the default configuration of the TOOLS_ONLY WebUI application mode
+  * Improved the default configuration of the TOOLS_ONLY application mode
 
   [Michele Simionato]
   * Added a `--tag` option to `oq engine --run` to tag jobs
