Fixed truncated custom_site_id

--- a/openquake/commonlib/tests/data/asce/WAF07.org
+++ b/openquake/commonlib/tests/data/asce/WAF07.org
@@ -1,5 +1,4 @@
 | PGA    | Ss     | Ss_seismicity | S1     | S1_seismicity | siteid |
 |--------+--------+---------------+--------+---------------+--------|
-| <0.005 | 0.0115 | NaN           | <0.005 | NaN           | SITE0  |
-| <0.005 | 0.0115 | NaN           | <0.005 | NaN           | SITE1  |
-| <0.005 | 0.0115 | NaN           | <0.005 | NaN           | SITE2  |
+| <0.005 | 0.0115 | nan           | <0.005 | nan           | SITE0  |
+| <0.005 | 0.0104 | nan           | <0.005 | nan           | SITE1  |
