--- a/openquake/commonlib/tests/data/asce/WAF41.org
+++ b/openquake/commonlib/tests/data/asce/WAF41.org
@@ -1,5 +1,4 @@
 | BSE2N_Ss | BSE2E_Ss | BSE1N_Ss | BSE1E_Ss | BSE2N_S1 | BSE2E_S1 | BSE1N_S1 | BSE1E_S1 | custom_site_id | siteid |
 |----------+----------+----------+----------+----------+----------+----------+----------+----------------+--------|
-| 0.0115   | 0.0073   | 0.0077   | 0.0      | 0.0      | 0.0      | 0.0      | 0.0      | 0:D            | SITE0  |
-| 0.0115   | 0.0073   | 0.0077   | 0.0      | 0.0      | 0.0      | 0.0      | 0.0      | 0:CD           | SITE1  |
-| 0.0115   | 0.0073   | 0.0077   | 0.0      | 0.0      | 0.0      | 0.0      | 0.0      | 0:C            | SITE2  |
+| 0.0115   | 0.0073   | 0.0077   | 0.0      | 0.0      | 0.0      | 0.0      | 0.0      | s1w7hy         | SITE0  |
+| 0.0104   | 0.0065   | 0.0069   | 0.0      | 0.0      | 0.0      | 0.0      | 0.0      | s1w7h          | SITE1  |
