Updated changelog [ci skip]

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Added parameter `siteid` in job.ini to specify the `custom_site_id`
   * Internal: extended baselib.sap to manage command classes
   * Saved memory in ebrisk, now most calculations can be run with 2 GB
     of RAM per core
