--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
+  [Michele Simionato]
+  * Added a new exporter hmaps-stats producing one file per return period
+
   [Maoxin Wang]
   * Added a new gsim file wang_2025_turkey.py to implement the Turkey-specific
-    ground motion models for Arias Intensity (IA), Cumulative Absolute Velocity (CAV),
-    5-75% Significant Duration (RSD575), and 5-95% Significant Duration (RSD595)
-    developed by Wang et al. (2025)
+    ground motion models for Arias Intensity (IA), Cumulative Absolute Velocity
+    (CAV), 5-75% Significant Duration (RSD575), and 5-95% Significant Duration
+    (RSD595) developed by Wang et al. (2025)
 
   [Michele Simionato]
   * For scenario_risk calculations expose the `aggrisk-stats` output even if
