--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
   [Michele Simionato]
-  
+  * Added a consistency check on the effective time when starting from SES
   * Added a new exporter hmaps-stats producing one file per return period
 
   [Maoxin Wang]
