changelog and gsim rst

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+  [Christopher Brooks]
+  * Added the Alaska bias adjustments for the NGASUB GMMs
+    as required for the USGS 2023 Alaska model.
+
   [Antonio Scala]
   * Added Scala et al (2025) GMM 
   
