--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,6 @@
+  [Christopher Brooks]
+  * Fixing class inheritances in MorikawaFujiwara2013 GMMs.
+
   [Amirhossein Mohammadi]
   * Added Mohammadi2023Turkiye ML-based GSIM for Turkey.
 
