--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+  [Christopher Brooks]
+  * Added the option of using a modified form of the Campbell and Bozorgnia
+    (2014) GMM's sigma model within the Kuehn et al. (2020) GMMs as required
+    for the 2023 USGS Alaska model.
+
   [Michele Simionato]
   * Improved the number of tasks generated in postclassical (they were too
     many for EUR)
