--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
   [Christopher Brooks]
-  * Added the option of using a modified form of the Campbell and Bozorgnia
-    (2014) GMM's sigma model within the Kuehn et al. (2020) GMMs as required
-    for the 2023 USGS Alaska model.
+  * Refactored the indirect AvgSA GMPEs capabilities to permit the
+    calculation of non-AvgSA IMTs using the underlying GMPE (added
+    new unit test of classical/case_91 for checking this works within
+    GmpeIndirectAvgSA and updated classical/case34 for checking this
+    works within GenericGmpeAvgSA).
 
   [Michele Simionato]
   * Implemented the "ilabel" feature i.e. region-dependent gsim logic trees
