Removed configuration parameter pmap_max_gb

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Removed parameter `pmap_max_gb`
   * Implemented the "ilabel" feature i.e. region-dependent gsim logic trees
   * Reduced the number of chunks generated in classical calculations, which
     has a huge effect on performance if you have 192 cores or more
