--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
   [Michele Simionato]
-  * Fixed `avg_gmf` being computed in the wrong situation due to a logic bug
+  * complex_fault_mesh_spacing is now mandatory in the job.ini file if
+    the model contains complex fault sources
 
   [Nicholas Clemett]
-  * Refactored the BaseAvgSACorrelationModel to make avg_periods an optional argument
+   * Refactored the BaseAvgSACorrelationModel to make avg_periods an optional
+     argument
   * Added EmpiricalAvgSACorrelationModel
-  * Added classes for the Clemett correlation models for active shallow crust, subduction interface, subduction slab and vrancea regions in europe based on the ESHM20 GMMs.
+  * Added classes for the Clemett correlation models for active shallow crust,
+    subduction interface, subduction slab and vrancea regions in europe based
+    on the ESHM20 GMMs.
 
   [Michele Simionato]
   * Internal: introduced subtasks in classical calculations
