--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,6 @@
   [Michele Simionato]
+  * Internal: changed `cmaker.from_srcs` to return a context array and not a
+    list with a single context array
   * Fixed AssertionError on len(mags) for GenericGmpeAvgSA with table-based
     GMPEs
   * complex_fault_mesh_spacing is now mandatory in the job.ini file if
