--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+  [Christopher Brooks]
+  * Fix small bug in Hashash et al. (2020) site term implementation within the 
+    NGA East models and regenerate the test tables (very small differences are
+    observed and only for SA(0.4)).
+ 
   [Michele Simionato]
   * Removed the long time deprecated method `get_mean_and_stddevs` from the GSIMs;
     you can use the helper function `contexts.mean_stds` instead
